<resources>
    <string name="app_name">KojoTrickLab</string>
    <string name="default_web_client_id">740541925912-q6bv5u8c89847dsagl0fji84ojpvqkj1.apps.googleusercontent.com</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_account_let_s_create">Don’t have account? Let’s create!</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="sign_in">Sign Up</string>
    <string name="already_have_account_login">Already have account? Login!</string>
    <string name="i_am_16_years_old_or_have_parents_guardian_permission_nto_sign_up">I am 16 years old or have parents/guardian permission\nto sign up</string>
    <string name="we_have_send_code_to_your_email_address">We have send code to your email address</string>
    <string name="verify">Verify</string>
    <string name="resend_code_in_23s">Resend Code in 23s</string>
    <string name="enter_your_email_associated_with_kojos_account">Enter your email associated with Kojos account</string>
    <string name="continues">Continue</string>
    <string name="enter_new_password_to_login">Enter new password to login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="your_account_npassword_changed_nsuccessfully">Your account\npassword changed\nsuccessfully</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="choose_skin">Choose Skin</string>
    <string name="tricking_nickname">Tricking Nickname</string>
    <string name="select_country">Select Country</string>
    <string name="time_tricking">Time Tricking</string>
    <string name="signature_trick">Signature Trick</string>
    <string name="dream_trick">Dream Trick</string>
    <string name="instagram">Instagram:</string>
    <string name="tiktok">TikTok:</string>
    <string name="youtube">YouTube:</string>
    <string name="explore_tricks_by_category">Explore tricks by category</string>
    <string name="done">Done</string>
    <string name="your_account_was_successfully_created">Your account was\nsuccessfully created!</string>
    <string name="progress_tracker">Progress Tracker</string>
    <string name="track_your_tricks_amp_milestones"><![CDATA[Track your tricks & milestones]]></string>
    <string name="my_tricks">My Tricks</string>
    <string name="see_all_the_tricks_that_you_started_and_is_still_in_nprogressions">See all the tricks that you started and is still in\nprogressions.</string>
    <string name="all_forward_tricks">All Forward Tricks</string>
    <string name="completed_tricks">Completed Tricks</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="combo_goals">Combo Goals</string>
    <string name="add_new_combo_goal">Add New Combo Goal</string>
    <string name="add_new_combo_goals">Add New Combo Goals</string>
    <string name="save">Save</string>
    <string name="add_combo_here">Add combo here</string>
    <string name="add_notes_for_combo_goals">Add Notes For Combo Goals</string>
    <string name="add_notes">Add Notes</string>
    <string name="forward_tricks">Forward Tricks</string>
    <string name="download">Download</string>
    <string name="tricking_milestones">Tricking Milestones</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="country">Country</string>
    <string name="social_media_links">Social Media Links</string>
    <string name="community">Community</string>


    <string name="category_intermediate">Category: Intermediate</string>
    <string name="see_all_personal_bests">See All Personal Bests</string>
    <string name="personal_bests">Personal Bests</string>
    <string name="trickerjohn">\@TrickerJohn-</string>
    <string name="update">Update</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="add_sessions_to_calendar_to_get_notified">Add sessions to calendar to get notified.</string>
    <string name="next_sessions">Next Sessions</string>
    <string name="upcoming_sessions">Upcoming sessions</string>
    <string name="view_all">View All</string>
    <string name="see_all">See All</string>
    <string name="clear_all">Clear All</string>
    <string name="session_title">Session Title</string>
    <string name="utx_kick_session">UTX Kick session</string>
    <string name="work_on_low_takeoff_extended_arms_safe_landing">Work on low takeoff, extended arms, safe landing</string>
    <string name="session_colour">Session Colour</string>
    <string name="session_date">Session Date</string>
    <string name="post_session_review">Post Session Review</string>
    <string name="select_any_session_to_start_from">Select any session to start from</string>
    <string name="edit_session">Edit Session</string>

    <string name="log_out">Log out</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_nthis_account">Are you sure you want to delete\nthis account?</string>
    <string name="ok">Ok</string>
    <string name="remove_this_combo_goal">Remove this Combo Goal</string>
    <string name="delete_this_session">Delete this Session</string>
    <string name="delete_all_session">Delete all past Session</string>
    <string name="are_you_sure_you_want_to_remove_nthis_combo_goal">Are you sure you want to remove\nthis combo goal?</string>
    <string name="are_you_sure_you_want_to_delete_this_session">Are you sure you want to delete\nthis session?</string>
    <string name="are_you_sure_you_want_to_delete_all_session">Are you sure you want to delete\nall past session?</string>
    <string name="select_session_color">Select Session color</string>
    <string name="update_session">Update Session</string>
    <string name="update_session_for">Update session for</string>
    <string name="comments">COMMENTS</string>
    <string name="remove">Remove</string>
    <string name="session_note">Session Note</string>
    <string name="select_trick">Select Trick</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="username">Username</string>

</resources>